# tiqs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: build_docs.py  plan-electron-support.md
docs/presentation/: demo.ipynb
docs/templates/: custom.css  module.html.jinja2
docs/theory/: cooling.md  gates.md  laser_ion_interaction.md  noise.md  normal_modes.md  overview.md  potentials.md  spam.md  species.md  transport.md  trapping.md
examples/: README.md  anharmonic_cooling.py  anharmonic_penning.py  coupled_penning_modes.py  elliptical_qubit_trap.py  magnetic_bottle.py  noguchi_trap.py  osada_reproduction.py  penning_motional_qubit.py  proton_benchmark.py
src/tiqs/: __init__.py  constants.py  elliptical.py  potential.py  pulses.py  transport.py  trap.py
src/tiqs/analysis/: __init__.py  error_budget.py  fidelity.py  phase_space.py
src/tiqs/chain/: __init__.py  equilibrium.py  lamb_dicke.py  normal_modes.py
src/tiqs/cooling/: __init__.py  doppler.py  eit_cooling.py  sideband_cooling.py  sympathetic.py
src/tiqs/gates/: __init__.py  adiabatic_gate.py  calibration.py  cirac_zoller.py  light_shift.py  microwave_ms.py  molmer_sorensen.py  qudit.py  single_qubit.py
src/tiqs/hilbert_space/: __init__.py  builder.py  operators.py  states.py
src/tiqs/interaction/: __init__.py  coulomb_coupling.py  exact_coupling.py  gradient.py  hamiltonian.py  laser.py  raman.py
src/tiqs/noise/: __init__.py  correlated.py  crosstalk.py  laser_noise.py  microwave_noise.py  motional.py  photon_scattering.py  qubit.py
src/tiqs/simulation/: __init__.py  config.py  runner.py
src/tiqs/spam/: __init__.py  measurement.py  preparation.py
src/tiqs/species/: __init__.py  data.py  electron.py  ion.py  protocol.py  proton.py  transitions.py
src/tiqs/transport/: shuttling.py  splitting.py
src/tiqs/trap/: paul_trap.py
tests/: conftest.py  test_analysis.py  test_chain.py  test_constants.py  test_cooling.py  test_coulomb_coupling.py  test_dynamics_validation.py  test_electron.py  test_elliptical.py  test_end_to_end.py  test_experimental_validation.py  test_gates.py  test_hilbert_space.py  test_integration.py  test_interaction.py  test_microwave.py  test_multimode.py  test_noise.py  test_penning.py  test_physics_accuracy.py  test_potential.py  test_precision_physics.py  test_proton.py  test_pulses.py  test_qudit.py  test_simulation.py  test_spam.py  test_species.py  test_sympathetic_cooling.py  test_transport.py  test_trap.py
