[project]
name = "qutip-trapped-ion-qc"
version = "0.1.0"
description = "Lowest-level trapped-ion quantum computer simulator built on QuTiP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qutip[runtime_compilation]>=5.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.11",
    "ty>=0.0.1a0",
]
docs = [
    "pdoc>=15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (skip with -m 'not slow')"]
addopts = ["-x", "--tb=short"]

[tool.ruff]
target-version = "py314"
line-length = 79 # https://peps.python.org/pep-0008/#maximum-line-length

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade (enforces modern Python syntax)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "NPY", # numpy-specific rules
    "RUF", # ruff-specific rules
]
ignore = [
    "SIM108", # ternary - if/else is clearer in educational code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF059"]  # unused unpacked vars in test fixtures

[tool.ruff.lint.isort]
known-first-party = ["tiqs"]

[tool.hatch.build.targets.wheel]
packages = ["src/tiqs"]

# Suppressed because QuTiP lacks complete type stubs
[tool.ty.rules]
unsupported-operator = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
